force-app/main/default/objects/b3o__Job__c/fields/tc9_3bint__Rate_Calculator__c.field-meta.xml
<CustomField>
    <fullName>tc9_3bint__Rate_Calculator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Rate Calculator</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>tc9_et__Rate_Calculator__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Template</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>tc9_et__Rate_Calculator__c</referenceTo>
    <relationshipLabel>3B Jobs</relationshipLabel>
    <relationshipName>X3B_Jobs</relationshipName>
    <type>Lookup</type>
</CustomField>