force-app/main/default/objects/b3o__Job__c/fields/tc9_3bint__Timesheet_Approver__c.field-meta.xml
<CustomField>
    <fullName>tc9_3bint__Timesheet_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Timesheet Approver</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>3B Jobs (Timesheet Approver)</relationshipLabel>
    <relationshipName>X3B_Jobs1</relationshipName>
    <type>Lookup</type>
</CustomField>