force-app/main/default/objects/b3o__Job__c/recordTypes/b3o__Contract.recordType-meta.xml
<RecordType>
    <fullName>b3o__Contract</fullName>
    <active>true</active>
    <label>Contract</label>
</RecordType>