force-app/main/default/objects/b3o__Job__c/recordTypes/b3o__Permanent.recordType-meta.xml
<RecordType>
    <fullName>b3o__Permanent</fullName>
    <active>true</active>
    <description>This job post is for a permanent position</description>
    <label>Permanent</label>
</RecordType>