force-app/main/default/objects/b3o__Job__c/recordTypes/b3o__Temporary.recordType-meta.xml
<RecordType>
    <fullName>b3o__Temporary</fullName>
    <active>true</active>
    <description>This job post is for an ongoing position</description>
    <label>Temporary</label>
</RecordType>