force-app/main/default/objects/b3o__Job__c/listViews/b3o__All.listView-meta.xml
<ListView>
    <fullName>b3o__All</fullName>
    <columns>NAME</columns>
    <columns>b3o__Site__c</columns>
    <columns>b3o__Job_Type__c</columns>
    <columns>b3o__Status__c</columns>
    <columns>b3o__Job_Boards__c</columns>
    <columns>b3o__Featured_Job__c</columns>
    <columns>b3o__Job_Post_Status__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>