force-app/main/default/objects/b3o__Job__c/listViews/b3o__Live.listView-meta.xml
<ListView>
    <fullName>b3o__Live</fullName>
    <columns>NAME</columns>
    <columns>b3o__Site__c</columns>
    <columns>b3o__Job_Type__c</columns>
    <columns>b3o__Status__c</columns>
    <columns>b3o__Job_Boards__c</columns>
    <columns>b3o__Featured_Job__c</columns>
    <columns>b3o__Job_Post_Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>b3o__Job_Boards__c</field>
        <operation>equals</operation>
        <value>Default</value>
    </filters>
    <label>Live</label>
</ListView>