force-app/main/default/objects/b3o__Job__c/listViews/b3o__New_Today.listView-meta.xml
<ListView>
    <fullName>b3o__New_Today</fullName>
    <columns>NAME</columns>
    <columns>b3o__Date_Posted__c</columns>
    <columns>b3o__Job_Post_Body__c</columns>
    <columns>b3o__Job_Post_Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>New Today</label>
</ListView>